<resources>
    <string name="app_name">Giphy</string>

    <!-- Auth -->
    <string name="login">Авторизация</string>
    <string name="register">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="signIn">Войти</string>

    <string name="no_user">Нет аккаунта?</string>
    <string name="regist">Зарегистрируйтесь</string>
    <string name="have_user">Уже есть аккаунт?</string>
    <string name="sign">Войдите</string>

    <string name="searchGif">Найдите любую гифку</string>
    <string name="load">Загрузить еще</string>

    <string name="type">Тип изображения:</string>
    <string name="id">id изображения:</string>
    <string name="title">Название изображения:</string>
    <string name="rating">Рэйтинг изображения:</string>
    <string name="back">Назад</string>


</resources>